# ha-pool-tracker

./: .gitignore  AGENTS.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements-dev.txt
custom_components/pool_tracker/: __init__.py  config_flow.py  const.py  event.py  manifest.json  models.py  prediction.py  sensor.py  services.yaml  store.py
custom_components/pool_tracker/frontend/: pool-tracker-frontend.js
custom_components/pool_tracker/translations/: en.json
docs/: openclaw.md
tests/: conftest.py  test_config_flow.py  test_event_store.py  test_frontend.py  test_home_assistant_integration.py  test_manifest.py  test_prediction.py  test_sensor.py  test_service_validation.py  test_services_yaml.py
