[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pool-tracker"
version = "0.1.0"
description = "Home Assistant custom integration for manual pool maintenance logging."
readme = "README.md"
requires-python = ">=3.14.2"
license = "MIT"
authors = [{ name = "Pool Tracker contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "homeassistant>=2026.6.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.26",
  "pytest-homeassistant-custom-component>=0.13.280",
  "ruff>=0.12",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "UP", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
